--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
+
 	<link href="main.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-	<script src="main.js">
-	</script>
 </head>
+
+<body>
+	<div class="calc-parent">
+
+		<div class="first-row">
+			<div class="calc-btn calc-btn-num column" id="calc-clear">C</div>
+			<div class="calc-btn calc-btn-num column" id="calc-clear" id="display-val"></div>
+		</div>
+
+		<div class="row">
+			<div class="calc-btn calc-btn-num column" id="calc-seven">7</div>
+			<div class="calc-btn calc-btn-num column" id="calc-eight">8</div>
+			<div class="calc-btn calc-btn-num column" id="calc-nine">9</div>
+			<div class="calc-btn calc-btn-operator column" id="calc-divide">&#247;</div>
+
+		</div>
+
+		<div class="row">
+			<div class="calc-btn calc-btn-num column" id="calc-four">4</div>
+			<div class="calc-btn calc-btn-num column" id="calc-five">5</div>
+			<div class="calc-btn calc-btn-num column" id="calc-six">6</div>
+			<div class="calc-btn calc-btn-operator column" id="calc-multiply">x</div>
+		</div>
+
+		<div class="row">
+			<div class="calc-btn calc-btn-num column" id="calc-one">1</div>
+			<div class="calc-btn calc-btn-num column" id="calc-two">2</div>
+			<div class="calc-btn calc-btn-num column" id="calc-three">3</div>
+			<div class="calc-btn calc-btn-operator column" id="calc-minus">-</div>
+		</div>
+
+		<div class="row">
+			<div class="calc-btn calc-btn-num column" id="calc-zero">0</div>
+			<div class="calc-btn calc-btn-num column" id="calc-decimal">.</div>
+			<div class="calc-btn calc-btn-operator column" id="calc-equals">=</div>
+			<div class="calc-btn calc-btn-operator column" id="calc-plus">+</div>
+
+
+  </div>
+
+</body>
+<script src="main.js">
+	</html>
